--- a/popup.html
+++ b/popup.html
@@ -10,36 +10,67 @@
           min-width: 300px;
       }
   </style>
+  <script src="assets/icons.js"></script>
 </head>
 <body>
 <div id="root">
   <div class="container">
-    <div class="row border-bottom my-2 pb-2">
-      <div class="col">
-        <form>
-          <div class="form-group">
-            <input type="text" class="form-control form-control-sm" id="inputUsername" placeholder="Enter username">
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control form-control-sm" id="inputPassword" placeholder="Password">
-          </div>
-          <button id="update-account-btn" type="button" class="btn btn-primary form-control form-control-sm">Update
-          </button>
-        </form>
+    <div class="row py-3 justify-content-center">
+      <div class="col-4 text-center text-success">
+        <i class="fas fa-at fa-2x"></i>
+        <i class="fas fa-at fa-2x"></i>
+      </div>
+      <div class="col-5 text-center">
+        <img src="images/panda-bamboo.png" width="100%">
+      </div>
+      <div class="col-3">
+        <button id="toggle-btn" class="btn btn-outline-danger p-0"><i class="fas fa-toggle-off fa-2x"></i></button>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-        <form>
-          <div class="form-group">
-            <input type="text" class="form-control form-control-sm" id="inputSubject" placeholder="Enter Id">
+    <div id="body-container" class="row">
+      <div class="container">
+        <div class="row border-bottom my-2 pb-2">
+          <div class="col">
+            <form class="">
+              <div class="form-group">
+                <label class="sr-only" for="inputUsername">Username</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">Student's ID</div>
+                  </div>
+                  <input type="text" class="form-control form-control-sm" id="inputUsername" placeholder="Student's ID">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="sr-only" for="inputPassword">Password @</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">Password @</div>
+                  </div>
+                  <input type="password" class="form-control form-control-sm" id="inputPassword"
+                         placeholder="Password @@">
+                </div>
+              </div>
+              <button id="update-account-btn" type="button" class="btn btn-primary form-control form-control-sm w-50">
+                Update
+              </button>
+            </form>
           </div>
-          <button id="add-btn" type="button" class="btn btn-danger form-control form-control-sm">Add</button>
-        </form>
+        </div>
+        <div class="row py-2">
+          <div class="col">
+            <form>
+              <div class="form-group">
+                <input type="text" class="form-control form-control-sm" id="inputSubject" placeholder="Enter Id">
+              </div>
+              <button id="add-btn" type="button" class="btn btn-success form-control form-control-sm">Add</button>
+            </form>
+          </div>
+        </div>
+        <div class="row">
+          <div id="subject-container" class="col"></div>
+        </div>
       </div>
-    </div>
-    <div  class="row">
-      <div id="subject-container" class="col"></div>
     </div>
   </div>
 </div>
